# over_under

./: .gitignore  .pnp.cjs  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: README.md  nx.json  package-lock.json  package.json  vercel.json
app/.next/server/: server-reference-manifest.js  server-reference-manifest.json
app/src/app/: page.tsx
app/web/: next.config.js  project.json  tsconfig.json
app/web/components/account/: account-detail-feature.tsx
app/web/components/cluster/: cluster-ui.tsx
app/web/components/dashboard/: dashboard-feature.tsx  tracker.tsx
app/web/components/solana/: solana-provider.tsx
app/web/components/ui/: ui-layout.tsx
app/web/public/: logo sprite.aseprite
app/web/utils/: idl.ts  over_under.json  over_under.ts  useProgram.ts
docs/: contexts.md  docs.md  user-stories.txt
over-under/: package-lock.json  package.json
over-under/web/app/: layout.tsx
over-under/web/components/cluster/: cluster-feature.tsx  cluster-ui.tsx
over-under/web/components/ui/: ui-layout.tsx
over_under/: package-lock.json  package.json
over_under/src/app/: layout.tsx  page.tsx
petdatdog/: package.json
programs/over_under/: Cargo.toml
programs/over_under/src/: errors.rs  lib.rs
programs/over_under/src/contexts/: assess_winners.rs  close_bet.rs  close_round.rs  init.rs  init_global.rs  init_round.rs  mod.rs  pay.rs  pay_close.rs  payout.rs  place_bet.rs  play_round.rs  refund_bet.rs  resolve_bet.rs  single_payout.rs
programs/over_under/src/state/: mod.rs
tests/: assess_winners.ts  close_round.ts  finish.ts  init_global.ts  init_round.ts  loop_10.sh  loop_rounds.sh  multiplayer.ts  over_under.ts  payout.ts  place_bet.ts  play_round.ts  sb.ts  single_player.ts  start.ts
(+3 files in other folders)
