[package]
name = "over_under"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "over_under"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
init-if-needed = []


[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
solana-program = "1.16.13"
anchor-instruction-sysvar = { git="https://github.com/deanmlittle/anchor-instruction-sysvar" }
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"]}
anchor-spl = { version = "0.28.0" }
